Mon May 18 21:29:22 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py,flax/searchserver/unittests/: Add
	  an abstract query structure for parsing query parameters into to
	  be passed to backends, and the start of a unittest framework.

Thu May 14 22:08:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py: For 2.4, where the
	  join and task_done methods are missing, add them as nops.

Tue May 12 07:57:57 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/__init__.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py: Some tidyups, and
	  add search_similar().  Also add search_template(), which is
	  somewhat experimental, and allows search templates to be written
	  in javascript.

Tue May 12 07:55:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,flax/searchserver/queries.py:
	  Add a set of classes to define Queries and Searches; the idea is
	  that application.py will parse the search parameters into these
	  classes, such that the backends simply have to take a Search
	  object and convert it into the appropriate search (or raise an
	  exception if that's not possible).  All the validation will live
	  in application.py (or, at least, not in backends).  Also, some
	  tidyups to validation and to documentation comments.

Mon May 11 14:23:49 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/base_backend.py: Fix parameter name,
	  and add base class for similarity searches.

Mon May 11 14:10:10 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/__init__.py: Remove some debugging
	  prints, and fix some indentations problems.

Sun May 10 21:14:01 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py: Fix missing wsgiwapi before